@@ -5607,6 +5607,36 @@ The resulting MZ binary won't run without further modification, i.e. adding a DO
 </TD>
 </TR>
 
+<TR BGCOLOR="#F0F0F0">
+<TD><b>x281</b></TD>
+<TD>Object format doesn't support anonymous fixups, location: &lt;offset&gt;</TD>
+<TD>Anonymous fixups are possible for the OMF object format only.
+</TD>
+</TR>
+
+<TR BGCOLOR="#F0F0F0">
+<TD><b>x282</b></TD>
+<TD>Segment/Section ignored in binary formats</TD>
+<TD>This is a warning. Informational sections for the linker are ignored for binary formats.
+</TD>
+</TR>
+
+<TR BGCOLOR="#F0F0F0">
+<TD><b>x283</b></TD>
+<TD>Opcode size suffix ignored for segment registers</TD>
+<TD>This is a warning if opcodes PUSHW/PUSHD are used to push segment registers. The expectation
+    might be that an appropriate size suffix (0x66) is generated by the assembler, but this assumption is incorrect.
+</TD>
+</TR>
+
+<TR BGCOLOR="#F0F0F0">
+<TD><b>x284</b></TD>
+<TD>Prologue not at PROC start</TD>
+<TD>This is a warning, caused for example by data definition directives at the procedure's start. This
+    is unusual, but accepted ( by JWasm and Masm ). It might cause unexpected results, though.
+</TD>
+</TR>
+
 </TABLE>
 
 <H1 ID="AD"> Appendix D. Differences between Masm 6 and Masm 8 </H1>
