@@ -380,3 +380,4 @@ pick( INFO_SECTION_IGNORED,              "Segment/Section ignored in binary form
 pick( msg_filler31, "" )
 #endif
 pick( OPCODE_SIZE_SUFFIX_IGNORED_FOR_SR, "Opcode size suffix ignored for segment registers" )
+pick( PROLOGUE_NOT_AT_PROC_START,        "Prologue not at PROC start" )
