@@ -35,6 +35,9 @@
    -  format pe: allow imports by number; see pe10.asm.
    -  option -Zg: increased Masm compatible codegen for hll expressions; see
       hll4.asm.
+   -  warning "Prologue not at PROC start" (level 3) added if the procedure's
+      prologue isn't generated at the procedure's start address; see
+      invoke53.asm.
 
    09.04.2022, v2.15:
 
